# RustedRover

./: Cargo.toml  README.md  json
backend/: Cargo.toml
backend/src/: app.rs  main.rs  osint_kernel.rs  web_service.rs
frontend/static/css/: main.css
frontend/static/js/: main.js
src/: api_keeper.rs  launcher.rs  main.rs  osint_kernel.rs
src/frontend/templates/: index.html
src/osint_kernel/: osint_builder.rs  osint_searcher.rs
src/osint_kernel/osint_utils/: ip.rs  mod.rs  number.rs
src/web_service/: handlers.rs  mod.rs  web_routers.rs
